[package]
name = "cproj"
version = "0.1.0"
edition = "2021"
description = "A TUI tool for creating C/C++ projects with templates"
authors = ["Mycin"]

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
